--- a/packages/nuxt-layer/package.json
+++ b/packages/nuxt-layer/package.json
@@ -24,5 +24,8 @@
     "typescript": "^5.7.2",
     "vue": "^3.5.13",
     "zod": "^3.24.1"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
