--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,17 +1,18 @@
 {
   "name": "@unpaged/vue",
   "main": "dist/index.js",
-  "type": "module",
+  "module": "dist/index.mjs",
   "version": "0.0.2",
   "dependencies": {
     "@unpaged/core": "^0.0.2",
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "tsup": "^8.3.5",
     "typescript": "^5.7.2"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsup"
   },
   "publishConfig": {
     "access": "public"
