--- a/packages/nuxt-layer/package.json
+++ b/packages/nuxt-layer/package.json
@@ -13,9 +13,11 @@
   },
   "dependencies": {
     "@unpaged/vue": "^0.0.3",
-    "nuxt": "^3.15.0"
+    "nuxt": "^3.15.1"
   },
   "devDependencies": {
+    "@iconify-json/material-symbols": "^1.2.12",
+    "@iconify-json/mdi": "^1.2.2",
     "@nuxt/eslint": "^0.7.4",
     "@nuxt/ui": "^2.20.0",
     "@vueuse/core": "^12.2.0",
