--- a/packages/nuxt-layer/package.json
+++ b/packages/nuxt-layer/package.json
@@ -20,6 +20,7 @@
     "@iconify-json/mdi": "^1.2.2",
     "@nuxt/eslint": "^0.7.4",
     "@nuxt/ui": "^2.20.0",
+    "@vueuse/components": "^12.5.0",
     "@vueuse/core": "^12.2.0",
     "@vueuse/nuxt": "^12.2.0",
     "eslint": "^9.17.0",
