--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -2,7 +2,7 @@
   "name": "@unpaged/vue",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
-  "version": "0.1.0",
+  "version": "0.2.0-beta.0",
   "dependencies": {
     "@unpaged/core": "workspace:*",
     "vue": "^3.5.13"
