--- a/packages/nuxt-layer/package.json
+++ b/packages/nuxt-layer/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@unpaged/nuxt-layer",
   "type": "module",
-  "version": "0.2.0-beta.0",
+  "version": "0.1.0",
   "main": "./nuxt.config.ts",
   "scripts": {
     "postinstall": "nuxt prepare",
