chore: use strict workspace dependency versions

--- a/packages/nuxt-layer/package.json
+++ b/packages/nuxt-layer/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@unpaged/vue": "workspace:*",
+    "@unpaged/vue": "workspace:^",
     "nuxt": "^3"
   },
   "devDependencies": {
