--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -4,7 +4,7 @@
   "module": "dist/index.mjs",
   "version": "0.0.12",
   "dependencies": {
-    "@unpaged/core": "workspace:*",
+    "@unpaged/core": "workspace:^",
     "vue": "^3.5.13"
   },
   "devDependencies": {
